Fix accounts not showing + popbubble display

--- a/src/components/utils/PopBubble.scss
+++ b/src/components/utils/PopBubble.scss
@@ -1,23 +1,16 @@
 @import "../../styles/variables";
 
-.pop-bubble {
-  &:after {
-    bottom: 100%;
-    left: $spacingL;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-bottom-color: $white;
-    border-width: 15px;
-    //box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.04), 0 10px 10px 0 rgba(0, 0, 0, 0.04);
-  }
-  &:hover:after {
-    width: 5px;
-    transition: width 0.2s ease;
-  }
+.pop-bubble:after {
+  bottom: 100%;
+  left: $spacingL;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-bottom-color: $white;
+  border-width: 15px;
 }
 
 .pop-bubble {
